--- a/src/main/proto/wfa/measurement/api/v2alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/api/v2alpha/BUILD.bazel
@@ -22,6 +22,7 @@ LIBS = [
     "duchy",
     "event_annotations",
     "event_group",
+    "event_group_metadata",
     "event_group_metadata_descriptor",
     "event_template",
     "exchange",
@@ -31,6 +32,7 @@ LIBS = [
     "measurement",
     "measurement_consumer",
     "measurement_spec",
+    "media_type",
     "model_line",
     "model_outage",
     "model_provider",
