--- a/src/test/kotlin/org/wfanet/measurement/securecomputation/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/securecomputation/BUILD.bazel
@@ -1,24 +1,24 @@
-load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
-load("@rules_java//java:defs.bzl", "java_binary")
+load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")
 
-package(default_visibility = [
-    "//src/main/kotlin/org/wfanet/measurement/securecomputation:__subpackages__",
-    "//src/test/kotlin/org/wfanet/measurement/securecomputation:__subpackages__",
-])
-
-kt_jvm_library(
-    name = "event_group_sync",
-    srcs = ["EventGroupSync.kt"],
+kt_jvm_test(
+    name = "EventGroupSyncTest",
+    srcs = ["EventGroupSyncTest.kt"],
+    test_class = "org.wfanet.measurement.securecomputation.EventGroupSyncTest",
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/common/api/grpc:list_resources",
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation:event_group_sync",
         "//src/main/proto/wfa/measurement/api/v2alpha:event_group_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:event_group_metadata_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:event_groups_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:media_type_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/securecomputation:campaign_metadata_kt_jvm_proto",
+        "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/com/google/events",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
+        "@wfa_common_jvm//imports/kotlin/kotlin/test",
         "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
+        "@wfa_common_jvm//imports/kotlin/org/mockito/kotlin",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc/testing",
     ],
 )
