test: refactor test based upon new implementation

--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/teesdk/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/teesdk/BUILD.bazel
@@ -6,6 +6,9 @@ kt_jvm_library(
     name = "base_tee_application",
     srcs = ["BaseTeeApplication.kt"],
     deps = [
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha:work_item_attempts_service",
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha:work_items_service",
+        "//src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha:work_item_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
         "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/queue:queue_subscriber",
