--- a/src/test/kotlin/org/wfanet/measurement/securecomputation/datawatcher/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/securecomputation/datawatcher/BUILD.bazel
@@ -6,15 +6,14 @@ package(
 )
 
 kt_jvm_test(
-    name = "DataWatcherFunctionTest",
-    srcs = ["DataWatcherFunctionTest.kt"],
-    test_class = "org.wfanet.measurement.securecomputation.deploy.gcloud.datawatcher.DataWatcherFunctionTest",
+    name = "DataWatcherTest",
+    srcs = ["DataWatcherTest.kt"],
+    test_class = "org.wfanet.measurement.securecomputation.datawatcher.DataWatcherTest",
     deps = [
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha:work_items_service",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/datawatcher:data_watcher",
-        "//src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/datawatcher:data_watcher_function",
         "//src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha:work_item_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/securecomputation/datawatcher/v1alpha:data_watcher_config_kt_jvm_proto",
-        "@wfa_common_jvm//imports/java/com/google/cloud/storage/contrib/nio",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/kotlin/kotlin/test",
         "@wfa_common_jvm//imports/kotlin/org/mockito/kotlin",
