--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha/BUILD.bazel
@@ -8,6 +8,8 @@ kt_jvm_library(
     deps = [
         ":resource_conversion",
         "//src/main/kotlin/org/wfanet/measurement/common/api:resource_ids",
+        "//src/main/kotlin/org/wfanet/measurement/common/api/grpc:list_resources",
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/deploy:work_items_publisher",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/service:errors",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/service:resource_key",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/service/internal:errors",
@@ -15,7 +17,6 @@ kt_jvm_library(
         "//src/main/proto/wfa/measurement/internal/securecomputation/controlplane:work_items_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha:work_item_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha:work_items_service_kt_jvm_grpc_proto",
-        "@wfa_common_jvm//imports/java/com/google/protobuf",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/identity",
@@ -28,6 +29,7 @@ kt_jvm_library(
     deps = [
         ":resource_conversion",
         "//src/main/kotlin/org/wfanet/measurement/common/api:resource_ids",
+        "//src/main/kotlin/org/wfanet/measurement/common/api/grpc:list_resources",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/service:errors",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/service:resource_key",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/service/internal:errors",
