feat: add iqf config to k8s config, and fix build warnings and errors

--- a/src/main/k8s/dev/reporting_v2_config_files_kustomization.yaml
+++ b/src/main/k8s/dev/reporting_v2_config_files_kustomization.yaml
@@ -20,3 +20,4 @@ configMapGenerator:
   - encryption_key_pair_config.textproto
   - metric_spec_config.textproto
   - known_event_group_metadata_type_set.pb
+  - impression_qualification_filter_config.textproto
