--- a/src/main/k8s/dev/BUILD.bazel
+++ b/src/main/k8s/dev/BUILD.bazel
@@ -448,6 +448,7 @@ kustomization_dir(
     testonly = True,
     srcs = [
         "reporting_v2_config_files_kustomization.yaml",
+        "//src/main/k8s/testing/secretfiles:impression_qualification_filter_config.textproto",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
     ],
     renames = {"reporting_v2_config_files_kustomization.yaml": "kustomization.yaml"},
