--- a/src/main/k8s/local/BUILD.bazel
+++ b/src/main/k8s/local/BUILD.bazel
@@ -332,6 +332,7 @@ kustomization_dir(
         "empty_akid_mapping_config.textproto",
         "empty_encryption_key_pair_config.textproto",
         "//src/main/k8s/testing/data:synthetic_generation_specs_small",
+        "//src/main/k8s/testing/secretfiles:impression_qualification_filter_config.textproto",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
         "//src/main/k8s/testing/secretfiles:metric_spec_config.textproto",
     ],
@@ -348,6 +349,7 @@ kustomization_dir(
         "config_files_kustomization.yaml",
         ":encryption_key_pair_config.textproto",
         "//src/main/k8s/testing/data:synthetic_generation_specs_small",
+        "//src/main/k8s/testing/secretfiles:impression_qualification_filter_config.textproto",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
         "//src/main/k8s/testing/secretfiles:metric_spec_config.textproto",
     ],
