--- a/src/main/proto/wfa/measurement/securecomputation/metadata/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/securecomputation/metadata/BUILD.bazel
@@ -60,18 +60,19 @@ kt_jvm_grpc_proto_library(
 )
 
 proto_library(
-    name = "resource_metadata_service_proto",
-    srcs = ["resource_metadata_service.proto"],
+    name = "metadata_state_log_service_proto",
+    srcs = ["metadata_state_log_service.proto"],
     strip_import_prefix = IMPORT_PREFIX,
     deps = [
         ":metadata_action_proto",
         ":requisition_metadata_proto",
         "@com_google_googleapis//google/api:field_behavior_proto",
         "@com_google_googleapis//google/api:resource_proto",
+        "@com_google_protobuf//:timestamp_proto",
     ],
 )
 
 kt_jvm_grpc_proto_library(
-    name = "resource_metadata_service_kt_jvm_grpc_proto",
-    deps = [":resource_metadata_service_proto"],
+    name = "metadata_state_log_service_kt_jvm_grpc_proto",
+    deps = [":metadata_state_log_service_proto"],
 )
