--- a/src/main/proto/wfa/measurement/internal/securecomputation/controlplane/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/internal/securecomputation/controlplane/BUILD.bazel
@@ -23,6 +23,7 @@ proto_library(
     strip_import_prefix = IMPORT_PREFIX,
     deps = [
         "@com_google_googleapis//google/api:field_behavior_proto",
+        "@com_google_protobuf//:any_proto",
         "@com_google_protobuf//:timestamp_proto",
     ],
 )
