--- a/src/main/proto/wfa/measurement/edpaggregator/eventgroups/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/edpaggregator/eventgroups/BUILD.bazel
@@ -5,15 +5,15 @@ load(
 )
 
 package(default_visibility = [
-    "//src/main/kotlin/org/wfanet/measurement/securecomputation:__subpackages__",
-    "//src/test/kotlin/org/wfanet/measurement/securecomputation:__subpackages__",
+    "//src/main/kotlin/org/wfanet/measurement/edpaggregator:__subpackages__",
+    "//src/test/kotlin/org/wfanet/measurement/edpaggregator:__subpackages__",
 ])
 
 IMPORT_PREFIX = "/src/main/proto"
 
 proto_library(
-    name = "event_group_info_proto",
-    srcs = ["event_group_info.proto"],
+    name = "event_group_sync_config_proto",
+    srcs = ["event_group_sync_config.proto"],
     strip_import_prefix = IMPORT_PREFIX,
     deps = [
         "@com_google_protobuf//:timestamp_proto",
@@ -21,6 +21,6 @@ proto_library(
 )
 
 kt_jvm_proto_library(
-    name = "event_group_info_kt_jvm_proto",
-    deps = [":event_group_info_proto"],
+    name = "event_group_sync_config_kt_jvm_proto",
+    deps = [":event_group_sync_config_proto"],
 )
