--- a/src/main/kotlin/org/wfanet/measurement/edpaggregator/eventgroups/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/edpaggregator/eventgroups/BUILD.bazel
@@ -19,5 +19,7 @@ kt_jvm_library(
         "@wfa_common_jvm//imports/java/com/google/protobuf",
         "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:signing_certs",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc",
     ],
 )
