--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -228,6 +228,9 @@ maven.install(
         "com.google.cloud:google-cloud-security-private-ca",
         # TODO(googleapis/java-cloud-bom#5279): Remove when managed by BOM.
         "com.google.apis:google-api-services-storage:v1-rev20240706-2.0.0",
+        "com.google.cloud:google-cloud-kms",
+        "com.google.auth:google-auth-library-credentials",
+        "com.google.auth:google-auth-library-oauth2-http",
 
         # AWS
         "software.amazon.awssdk:acmpca",
