--- a/src/test/kotlin/org/wfanet/measurement/edpaggregator/deploy/gcloud/eventgroups/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/edpaggregator/deploy/gcloud/eventgroups/BUILD.bazel
@@ -1,9 +1,9 @@
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")
 
 kt_jvm_test(
-    name = "EventGroupSyncTest",
-    srcs = ["EventGroupSyncTest.kt"],
-    test_class = "org.wfanet.measurement.securecomputation.eventgroups.EventGroupSyncTest",
+    name = "EventGroupSyncFunctionTest",
+    srcs = ["EventGroupSyncFunctionTest.kt"],
+    test_class = "org.wfanet.measurement.securecomputation.eventgroups.EventGroupSyncFunctionTest",
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/common/api/grpc:list_resources",
         "//src/main/kotlin/org/wfanet/measurement/edpaggregator/deploy/gcloud/eventgroups:event_group_sync_function",
@@ -11,7 +11,8 @@ kt_jvm_test(
         "//src/main/proto/wfa/measurement/api/v2alpha:event_group_metadata_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:event_groups_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:media_type_kt_jvm_proto",
-        "//src/main/proto/wfa/measurement/securecomputation/eventgroups/v1alpha:campaign_metadata_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/edpaggregator/eventgroups/v1alpha:campaign_metadata_kt_jvm_proto",
+        "@wfa_common_jvm//imports/java/com/google/cloud/storage/contrib/nio",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/com/google/events",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
@@ -20,5 +21,6 @@ kt_jvm_test(
         "@wfa_common_jvm//imports/kotlin/org/mockito/kotlin",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc/testing",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/gcs/testing",
     ],
 )
