--- a/src/main/k8s/testing/secretfiles/BUILD.bazel
+++ b/src/main/k8s/testing/secretfiles/BUILD.bazel
@@ -12,6 +12,7 @@ package(
         "//src/main/kotlin/org/wfanet/measurement/testing:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/access:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/api:__subpackages__",
+        "//src/test/kotlin/org/wfanet/measurement/edpaggregator/deploy/gcloud/eventgroups:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/edpaggregator/requisitionfetcher:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/integration:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/kingdom/batch:__subpackages__",
