--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/testing/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/testing/BUILD.bazel
@@ -3,7 +3,9 @@ load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 package(
     default_testonly = True,
     default_visibility = [
+        "//src/main/kotlin/org/wfanet/measurement/edpaggregator:__subpackages__",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation:__subpackages__",
+        "//src/test/kotlin/org/wfanet/measurement/edpaggregator:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/securecomputation:__subpackages__",
     ],
 )
