--- a/src/main/kotlin/org/wfanet/measurement/common/testing/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/common/testing/BUILD.bazel
@@ -3,17 +3,17 @@ load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 package(
     default_testonly = True,
     default_visibility = [
+        "//src/main/kotlin/org/wfanet/measurement/edpaggregator:__subpackages__",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation:__subpackages__",
+        "//src/test/kotlin/org/wfanet/measurement/edpaggregator:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/securecomputation:__subpackages__",
     ],
 )
 
 kt_jvm_library(
     name = "testing",
-    srcs = ["CloudFunctionProcess.kt"],
+    srcs = ["JavaBinaryProcess.kt"],
     deps = [
-        "@wfa_common_jvm//imports/java/com/google/cloud/functions:functions_framework_api",
-        "@wfa_common_jvm//imports/java/com/google/events",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
         "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
