--- a/src/test/kotlin/org/wfanet/measurement/edpaggregator/deploy/gcloud/requisitionfetcher/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/edpaggregator/deploy/gcloud/requisitionfetcher/BUILD.bazel
@@ -20,7 +20,7 @@ kt_jvm_test(
     timeout = "short",
     srcs = ["RequisitionFetcherFunctionTest.kt"],
     data = [
-        ":InvokeRequisitionFetcherFunction_deploy.jar",
+        ":InvokeRequisitionFetcherFunction",
         "//src/main/k8s/testing/secretfiles:root_certs",
         "//src/main/k8s/testing/secretfiles:secret_files",
     ],
