change parameter type

--- a/src/main/kotlin/org/wfanet/measurement/reporting/service/internal/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/reporting/service/internal/BUILD.bazel
@@ -26,6 +26,7 @@ kt_jvm_library(
     srcs = ["Errors.kt"],
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/common/grpc:error_info",
+        "//src/main/proto/wfa/measurement/internal/reporting/v2:metric_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/io/grpc:api",
     ],
 )
