feat: pass iqf mapping to internal basic report constructor, and check iqf existence in insert basic report

--- a/src/test/kotlin/org/wfanet/measurement/reporting/deploy/v2/gcloud/spanner/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/reporting/deploy/v2/gcloud/spanner/BUILD.bazel
@@ -19,6 +19,9 @@ spanner_emulator_test(
 spanner_emulator_test(
     name = "SpannerBasicReportsServiceTest",
     srcs = ["SpannerBasicReportsServiceTest.kt"],
+    data = [
+        "//src/main/k8s/testing/secretfiles:impression_qualification_filter_config.textproto",
+    ],
     tags = [
         "cpu:2",
         "no-remote-exec",
