--- a/src/test/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha/BUILD.bazel
@@ -297,6 +297,9 @@ kt_jvm_test(
 spanner_emulator_test(
     name = "BasicReportsServiceTest",
     srcs = ["BasicReportsServiceTest.kt"],
+    data = [
+        "//src/main/k8s/testing/secretfiles:impression_qualification_filter_config.textproto",
+    ],
     tags = [
         "cpu:2",
         "no-remote-exec",
