--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/spanner/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/spanner/BUILD.bazel
@@ -19,3 +19,27 @@ kt_jvm_library(
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/spanner",
     ],
 )
+
+kt_jvm_library(
+    name = "internal_api_services",
+    srcs = ["InternalApiServices.kt"],
+    deps = [
+        ":services",
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/service/internal:queue_mapping",
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/service/internal:services",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/spanner",
+    ],
+)
+
+kt_jvm_library(
+    name = "internal_api_server",
+    srcs = ["InternalApiServer.kt"],
+    deps = [
+        ":internal_api_services",
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/service/internal:queue_mapping",
+        "@wfa_common_jvm//imports/java/picocli",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/spanner",
+    ],
+)
