--- a/src/main/kotlin/org/wfanet/measurement/duchy/deploy/gcloud/job/mill/liquidlegionsv3demo/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/duchy/deploy/gcloud/job/mill/liquidlegionsv3demo/BUILD.bazel
@@ -3,6 +3,7 @@ load("@wfa_common_jvm//build:defs.bzl", "test_target")
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 load("//build/platforms:constraints.bzl", "DISTROLESS_JAVA")
 load("//src/main/docker:macros.bzl", "java_image")
+load("//src/main/docker:macros.bzl", "java_debug_image")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -26,7 +27,7 @@ java_binary(
     ],
 )
 
-java_image(
+java_debug_image(
     name = "gcs_liquid_legions_v3_demo_mill_job_image",
     binary = ":GcsLiquidLegionsV3DemoMillJob",
     main_class = "org.wfanet.measurement.duchy.deploy.gcloud.job.mill.liquidlegionsv3demo.GcsLiquidLegionsV3DemoMillJobKt",
