feat: add iqf config to local/testing config files and BUILD

--- a/src/main/k8s/local/testing/config_files_kustomization.yaml
+++ b/src/main/k8s/local/testing/config_files_kustomization.yaml
@@ -22,3 +22,4 @@ configMapGenerator:
   - synthetic_event_group_spec_small_1.textproto
   - synthetic_event_group_spec_small_2.textproto
   - known_event_group_metadata_type_set.pb
+  - impression_qualification_filter_config.textproto
