--- a/src/main/proto/wfa/measurement/securecomputation/metadata/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/securecomputation/metadata/BUILD.bazel
@@ -16,6 +16,7 @@ proto_library(
     srcs = ["metadata_action.proto"],
     strip_import_prefix = IMPORT_PREFIX,
     deps = [
+        "requisition_metadata_proto",
         "@com_google_protobuf//:timestamp_proto",
     ],
 )
@@ -30,7 +31,6 @@ proto_library(
     srcs = ["requisition_metadata.proto"],
     strip_import_prefix = IMPORT_PREFIX,
     deps = [
-        ":metadata_action_proto",
         "@com_google_googleapis//google/api:field_behavior_proto",
         "@com_google_googleapis//google/api:resource_proto",
         "@com_google_protobuf//:timestamp_proto",
