--- a/src/main/kotlin/org/wfanet/measurement/gcloud/testing/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/gcloud/testing/BUILD.bazel
@@ -12,7 +12,7 @@ package(
 
 kt_jvm_library(
     name = "testing",
-    srcs = ["CloudFunctionProcess.kt"],
+    srcs = ["FunctionsFrameworkInvokerProcess.kt"],
     deps = [
         "@wfa_common_jvm//imports/java/com/google/protobuf",
         "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
