--- a/src/main/proto/wfa/measurement/config/securecomputation/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/config/securecomputation/BUILD.bazel
@@ -18,3 +18,18 @@ kt_jvm_proto_library(
     name = "queues_config_kt_jvm_proto",
     deps = [":queues_config_proto"],
 )
+
+proto_library(
+    name = "data_watcher_config_proto",
+    srcs = ["data_watcher_config.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [
+        "@com_google_protobuf//:any_proto",
+        "@com_google_protobuf//:struct_proto",
+    ],
+)
+
+kt_jvm_proto_library(
+    name = "data_watcher_config_kt_jvm_proto",
+    deps = [":data_watcher_config_proto"],
+)
