address requested changes

--- a/src/main/proto/api-linter.yaml
+++ b/src/main/proto/api-linter.yaml
@@ -16,6 +16,7 @@
   - 'wfa/measurement/reporting/**/*.proto'
   - 'wfa/measurement/system/**/*.proto'
   - 'wfa/measurement/securecomputation/controlplane/**/*.proto'
+  - 'wfa/measurement/edpaggregator/eventgroups/**/*.proto'
   disabled_rules:
   - 'core::0191::java-package'
   - 'core::0146::any'
