--- a/src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/common/server/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/common/server/BUILD.bazel
@@ -10,6 +10,7 @@ kt_jvm_library(
         "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/gcloud/server:__subpackages__",
     ],
     deps = [
+        "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/common:spanner_flags",
         "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/common/service:services",
         "@wfa_common_jvm//imports/java/picocli",
         "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
