refactor: based on PR comments

--- a/src/main/k8s/testing/secretfiles/secure_computation_control_plane_secrets_kustomization.yaml
+++ b/src/main/k8s/testing/secretfiles/secure_computation_control_plane_secrets_kustomization.yaml
@@ -15,9 +15,6 @@
 secretGenerator:
   - name: signing
     files:
-      - control_plane_root.pem
-      - control_plane_tls.pem
-      - control_plane_tls.key
-  - name: mc-config
-    files:
-      - measurement_consumer_config.textproto
+      - secure_computation_control_plane_root.pem
+      - secure_computation_control_plane_tls.pem
+      - secure_computation_control_plane_tls.key
