--- a/.github/workflows/configure-secure-computation-control-plane.yml
+++ b/.github/workflows/configure-secure-computation-control-plane.yml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: "Configure Control Plane"
+name: "Configure Control Plane for Secure Computation"
 
 on:
   workflow_call:
@@ -51,10 +51,10 @@ permissions:
   id-token: write
 
 env:
-  KUSTOMIZATION_PATH: "k8s/control_plane"
+  KUSTOMIZATION_PATH: "k8s/secure_computation_control_plane"
 
 jobs:
-  update-control-plane:
+  update-secure-computation-control-plane:
     runs-on: ubuntu-22.04
     environment: ${{ inputs.environment }}
     steps:
@@ -95,13 +95,13 @@ jobs:
     - name: Get GKE cluster credentials
       uses: google-github-actions/get-gke-credentials@v2
       with:
-        cluster_name: control-plane
+        cluster_name: secure-computation-control-plane
         location: ${{ vars.GCLOUD_ZONE }}
 
     - name: Generate archives
       run: >
         bazelisk build
-        //src/main/k8s/dev:control_plane.tar
+        //src/main/k8s/dev:secure_computation_control_plane.tar
         //src/main/k8s/testing/secretfiles:archive
 
     - name: Make Kustomization dir
@@ -109,21 +109,21 @@ jobs:
 
     - name: Extract Kustomization archive
       run: >
-        tar -xf "$BAZEL_BIN/src/main/k8s/dev/control_plane.tar"
+        tar -xf "$BAZEL_BIN/src/main/k8s/dev/secure_computation_control_plane.tar"
         -C "$KUSTOMIZATION_PATH"
 
     - name: Extract secret files archive
       run: >
         tar -xf "$BAZEL_BIN/src/main/k8s/testing/secretfiles/archive.tar"
-        -C "$KUSTOMIZATION_PATH/src/main/k8s/dev/control_plane_secrets"
+        -C "$KUSTOMIZATION_PATH/src/main/k8s/dev/secure_computation_control_plane_secrets"
 
     - name: Copy secret generator
       run: >
-        cp src/main/k8s/testing/secretfiles/control_plane_secrets_kustomization.yaml
-        "$KUSTOMIZATION_PATH/src/main/k8s/dev/control_plane_secrets/kustomization.yaml"
+        cp src/main/k8s/testing/secretfiles/secure_computation_control_plane_secrets_kustomization.yaml
+        "$KUSTOMIZATION_PATH/src/main/k8s/dev/secure_computation_control_plane_secrets/kustomization.yaml"
 
     - name: Export KUSTOMIZE_PATH
-      run: echo "KUSTOMIZE_PATH=$KUSTOMIZATION_PATH/src/main/k8s/dev/control_plane" >> $GITHUB_ENV
+      run: echo "KUSTOMIZE_PATH=$KUSTOMIZATION_PATH/src/main/k8s/dev/secure_computation_control_plane" >> $GITHUB_ENV
 
     - name: kubectl diff
       id: kubectl-diff
